--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -116,10 +116,23 @@ body{
         box-shadow: none;
         font-size: 16px;
     }
-    .project_details .deatil h2{
+    .project_details h2{
         font-weight: var(--font-weigh6);
         color: var(--color1);
-        padding: 10px 0px;
+        text-align: center;
+    }
+    .project_details p{
+        font-weight: var(--font-weigh6);
+        color: var(--color5);
+        text-align: center;
+        font-size: 18px;
+    }
+    .project_details .deatil{
+        background-color: var(--color2);
+        box-shadow: var(--box-shadowcard);
+        padding: 20px;
+        margin: 10px;
+        border-radius: 5px;
     }
     .project_details .deatil ul{
         list-style-type: none;
@@ -127,16 +140,23 @@ body{
     }
     .project_details .deatil ul li{
         font-weight: var(--font-weigh6);
-        font-size: 20px;
+        font-size: 18px;
         color: var(--color6);
         padding: 5px 0px;
     }
     .project_details .deatil ul li span{
-        font-size: 22px;
+        font-size: 20px;
         color: var(--color5);
     }
     .project_details .alert {
         font-weight: var(--font-weigh6);
+    }
+    .project_details .deatil .btn{
+        background-color: var(--color1);
+        color: var(--color2);
+        font-weight: var(--font-weigh5);
+        box-shadow: none;
+        font-size: 16px;
     }
 /* =========X===Project Details Page===X========== */
 
