--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -235,6 +235,7 @@ body{
         font-size: 18px;
         font-weight: var(--font-weigh6);
         color: var(--color5);
+        padding: 10px;
     }
 
 /* ========X===Technology===X=========== */
